scripts/nullaway/original/url2d0aeba8a7_kobantser_Calculator_tgz-pJ8-com_teamdev_students_calculator_impl_StateMachineCalculatorJ8.txt
../original/url2d0aeba8a7_kobantser_Calculator_tgz-pJ8-com_teamdev_students_calculator_impl_StateMachineCalculatorJ8/src/com/teamdev/students/fsm/FiniteStateMachine.java:33: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return null;
        ^
    (see http://t.uber.com/nullaway )
../original/url2d0aeba8a7_kobantser_Calculator_tgz-pJ8-com_teamdev_students_calculator_impl_StateMachineCalculatorJ8/src/com/teamdev/students/calculator/impl/EvaluationContext.java:28: error: [NullAway] initializer method does not guarantee @NonNull field previousState (line 9) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public EvaluationContext(String mathExpression) {
           ^
    (see http://t.uber.com/nullaway )
../original/url2d0aeba8a7_kobantser_Calculator_tgz-pJ8-com_teamdev_students_calculator_impl_StateMachineCalculatorJ8/src/com/teamdev/students/calculator/impl/EvaluationMatrix.java:47: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return transitions.get(state);
        ^
    (see http://t.uber.com/nullaway )
../original/url2d0aeba8a7_kobantser_Calculator_tgz-pJ8-com_teamdev_students_calculator_impl_StateMachineCalculatorJ8/src/com/teamdev/students/calculator/impl/BinaryOperatorFactory.java:19: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return operators.get(operatorPresentation);
        ^
    (see http://t.uber.com/nullaway )
../original/url2d0aeba8a7_kobantser_Calculator_tgz-pJ8-com_teamdev_students_calculator_impl_StateMachineCalculatorJ8/src/com/teamdev/students/calculator/impl/FunctionFactory.java:21: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return functions.get(presentation);
        ^
    (see http://t.uber.com/nullaway )
../original/url2d0aeba8a7_kobantser_Calculator_tgz-pJ8-com_teamdev_students_calculator_impl_StateMachineCalculatorJ8/src/com/teamdev/students/calculator/impl/parsers/EndOfExpressionParser.java:35: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return null;
        ^
    (see http://t.uber.com/nullaway )
../original/url2d0aeba8a7_kobantser_Calculator_tgz-pJ8-com_teamdev_students_calculator_impl_StateMachineCalculatorJ8/src/com/teamdev/students/calculator/impl/parsers/NumberParser.java:42: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return null;
        ^
    (see http://t.uber.com/nullaway )
../original/url2d0aeba8a7_kobantser_Calculator_tgz-pJ8-com_teamdev_students_calculator_impl_StateMachineCalculatorJ8/src/com/teamdev/students/calculator/impl/parsers/FunctionRightParenthesisParser.java:59: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return null;
        ^
    (see http://t.uber.com/nullaway )
../original/url2d0aeba8a7_kobantser_Calculator_tgz-pJ8-com_teamdev_students_calculator_impl_StateMachineCalculatorJ8/src/com/teamdev/students/calculator/impl/parsers/RightParenthesisParser.java:47: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return null;
        ^
    (see http://t.uber.com/nullaway )
../original/url2d0aeba8a7_kobantser_Calculator_tgz-pJ8-com_teamdev_students_calculator_impl_StateMachineCalculatorJ8/src/com/teamdev/students/calculator/impl/parsers/FunctionParser.java:35: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return null;
        ^
    (see http://t.uber.com/nullaway )
../original/url2d0aeba8a7_kobantser_Calculator_tgz-pJ8-com_teamdev_students_calculator_impl_StateMachineCalculatorJ8/src/com/teamdev/students/calculator/impl/parsers/ArgumentSeparatorParser.java:31: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return null;
        ^
    (see http://t.uber.com/nullaway )
../original/url2d0aeba8a7_kobantser_Calculator_tgz-pJ8-com_teamdev_students_calculator_impl_StateMachineCalculatorJ8/src/com/teamdev/students/calculator/impl/parsers/LeftParenthesisParser.java:34: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return null;
        ^
    (see http://t.uber.com/nullaway )
../original/url2d0aeba8a7_kobantser_Calculator_tgz-pJ8-com_teamdev_students_calculator_impl_StateMachineCalculatorJ8/src/com/teamdev/students/calculator/impl/parsers/FunctionLeftParenthesisParser.java:33: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return null;
        ^
    (see http://t.uber.com/nullaway )
../original/url2d0aeba8a7_kobantser_Calculator_tgz-pJ8-com_teamdev_students_calculator_impl_StateMachineCalculatorJ8/src/com/teamdev/students/calculator/impl/parsers/BinaryOperatorParser.java:36: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return null;
        ^
    (see http://t.uber.com/nullaway )
14 errors
